--- a/AzureTest/AzureTets.Web/AzureTets.Web.csproj
+++ b/AzureTest/AzureTets.Web/AzureTets.Web.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.Web" Version="2.5.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
   </ItemGroup>
 
