--- a/AzureTest/AzureTets.Web/AzureTets.Web.csproj
+++ b/AzureTest/AzureTets.Web/AzureTets.Web.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <ApplicationInsightsResourceId>/subscriptions/30471a3b-7759-4395-b02d-43d3a80ed8c2/resourcegroups/Default-ApplicationInsights-EastUS/providers/microsoft.insights/components/AzureTets.Web</ApplicationInsightsResourceId>
+    <ApplicationInsightsAnnotationResourceId>/subscriptions/30471a3b-7759-4395-b02d-43d3a80ed8c2/resourcegroups/Default-ApplicationInsights-EastUS/providers/microsoft.insights/components/AzureTets.Web</ApplicationInsightsAnnotationResourceId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,8 +12,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.ApplicationInsights.Web" Version="2.5.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
 </Project>
