--- a/AzureTest/AzureTets.Web/AzureTets.Web.csproj
+++ b/AzureTest/AzureTets.Web/AzureTets.Web.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AzureTest.DataContext\AzureTest.DataContext.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
